@@ -1,6 +1,6 @@
 class LeadsController < ApplicationController
-  before_filter :require_user, :except => [ :toggle ]
-  before_filter "set_current_tab(:leads)", :except => [ :toggle ]
+  before_filter :require_user
+  before_filter "set_current_tab(:leads)"
 
   # GET /leads
   # GET /leads.xml
@@ -100,21 +100,6 @@ class LeadsController < ApplicationController
   # POST /leads/1.xml
   #----------------------------------------------------------------------------
   def convert
-  end
-
-  # GET /toggle
-  #----------------------------------------------------------------------------
-  def toggle
-    render :update do |page|
-      if params[:visible] == "false"
-        page["#{params[:id]}_arrow"].replace_html "&#9660;"
-        callback = "beforeStart"
-      else
-        page["#{params[:id]}_arrow"].replace_html "&#9658;"
-        callback = "afterFinish"
-      end
-      page << "Effect.toggle('#{params[:id]}', 'slide', { duration: 0.25, #{callback}: function() { $('#{params[:id]}_intro').toggle(); } });"
-    end
   end
 
 end
