@@ -1,21 +1,21 @@
-.subtitle= link_to_function "Add Contact Information", %w/$("contact_intro").toggle(); $("contact").toggle()/
+.subtitle= subtitle :contact, "Contact Information"
 .section
   #contact_intro{ hidden_if(!@account.errors.empty?) }
-    You can add contact information later.
+    %small You can add lead contact information later.
   #contact{ hidden_if(@account.errors.empty?) }
     %table{ :border => 0, :width => 500, :cellpadding => 0, :cellspacing => 0 }
       %tr
         %td{ :valign => :top }
-          .label Website:
+          .label.top Website:
           = f.text_field :website, :style => "width:240px"
         %td= spacer
         %td{ :valign => :top }
-          .label Phone:
-          = f.text_field :phone, :style => "width:240px"
+          .label.top Tall-free phone:
+          = f.text_field :tall_free_phone, :style => "width:240px"
       %tr
         %td{ :valign => :top }
-          .label Fax:
-          = f.text_field :fax, :style => "width:240px"
+          .label Phone:
+          = f.text_field :phone, :style => "width:240px"
         %td= spacer
         %td{ :valign => :top }
           .label Fax:
