@@ -1,7 +1,7 @@
-.subtitle= link_to_function "Add Permissions", %/$("permissions_intro").toggle(); $("permissions").toggle()/
+.subtitle= subtitle :permissions
 .section
   #permissions_intro{ hidden_if(!@account.errors.empty?) }
-    Only you will have access to the account. You can change permissions later.
+    %small By default only you will have access to the account. You can change account permissions later.
   #permissions{ hidden_if(@account.errors.empty?) }
     .radio_box
       = radio_button_tag "account[access]", "Private", @account.access == "Private", :onclick => "$('people').hide()"
