@@ -23,7 +23,7 @@
       %table{ :width => 500, :cellpadding => 0, :cellspacing => 0 }
         %tr
           %td{ :colspan => 4, :valign => :top }
-            .label Campaign name:
+            .label.top.req Campaign name:
             = f.text_field :name, :style => "width:500px"
         %tr
           %td{ :valign => :top }
