@@ -7,11 +7,11 @@
       %table{ :width => 500, :cellpadding => 0, :cellspacing => 0 }
         %tr
           %td{ :valign => :top }
-            .label First name:
+            .label.top.req First name:
             = f.text_field :first_name, :style => "width:240px"
           %td= spacer
           %td{ :valign => :top }
-            .label Last name:
+            .label.top.req Last name:
             = f.text_field :last_name, :style => "width:240px"
         %tr
           %td{ :valign => :top }
