@@ -7,6 +7,7 @@ class CreateAccounts < ActiveRecord::Migration
       t.string      :access, :limit => 8, :default => "Private" # %w(Private Public Shared)
       t.string      :notes
       t.string      :website, :limit => 64
+      t.string      :tall_free_phone, :limit => 32
       t.string      :phone, :limit => 32
       t.string      :fax, :limit => 32
       t.string      :billing_address
